fix: align file transfer path controls

--- a/src/index.css
+++ b/src/index.css
@@ -3281,6 +3281,7 @@ button {
 
 .zt-file-transfer-pane[data-local="true"] .zt-file-transfer-path {
   grid-template-columns: 72px minmax(0, 1fr) repeat(3, 26px);
+  padding-left: 0;
 }
 
 .zt-file-transfer-root-select.zt-select-trigger {
@@ -4788,6 +4789,8 @@ button {
 .zt-file-transfer-dialog .zt-file-transfer-path .zt-file-transfer-root-select.zt-select-trigger {
   width: 72px;
   min-width: 72px;
+  justify-content: flex-start;
+  padding-left: 0;
 }
 
 .zt-file-transfer-dialog .zt-file-transfer-arrows button {
